# tinystt

./: CMakeLists.txt  README.md  main.cpp
.github/workflows/: release.yml
