cmake_minimum_required(VERSION 3.22.1)
project(tinystt C CXX)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_POSITION_INDEPENDENT_CODE ON)
if(NOT CMAKE_BUILD_TYPE)
  set(CMAKE_BUILD_TYPE Release)
endif()

include(FetchContent)
FetchContent_Declare(whispercpp GIT_REPOSITORY https://github.com/ggerganov/whisper.cpp.git GIT_TAG v1.9.1)
set(GGML_CPU ON CACHE BOOL "" FORCE)
set(GGML_BUILD_TESTS OFF CACHE BOOL "" FORCE)
set(GGML_BUILD_EXAMPLES OFF CACHE BOOL "" FORCE)
set(GGML_BLAS OFF CACHE BOOL "" FORCE)
set(GGML_METAL OFF CACHE BOOL "" FORCE)
set(BUILD_SHARED_LIBS OFF CACHE BOOL "" FORCE)
FetchContent_MakeAvailable(whispercpp)

find_package(Threads REQUIRED)
add_executable(tinystt main.cpp)
target_include_directories(tinystt PRIVATE ${whispercpp_SOURCE_DIR}/include ${whispercpp_SOURCE_DIR}/src)
target_link_libraries(tinystt PRIVATE whisper Threads::Threads)
